--- a/index.html
+++ b/index.html
@@ -329,6 +329,25 @@
                         </div>
                     </div>
                 </div>
+                <div class="skeleton-loader batch-loader">
+                    <div class="course-card" data-course="CN" data-batch="CN-01">
+                        <div class="card">
+                            <div class="banner">
+                                <span class="banner-text">50% OFF</span>
+                                <span class="banner-text">Openning</span>
+                            </div>
+                            <p class="card__subtitle">CN-01</p>
+                            <p><span class="card__title">Computer Networks</span></p>
+                            <p class="card_instructor">Mentor: <span>MD. Al Akib</span></p>
+                            <p class="card_start">Starting: August 15, 2025</p>
+                            <p class="card_date">Duration: 2+ Months</p>
+                            <p class="fee">
+                                <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">750৳</span>
+                                <span>375৳</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -471,7 +490,7 @@
                 <h2 class="retro-feedback-title">Feel free to drop us your feedback.</h2>
             </div>
             <div class="retro-feedback-right">
-                <form class="retro-form" autocomplete="off" id="feedbackForm">
+                <form class="retro-form" autocomplete="off" id="feedbackForm" netlify>
                     <label class="retro-label" for="satisfaction">
                         Are you satisfied with our overall support ?
                     </label>
