--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
                         <p class="card__subtitle">ICS-01</p>
                         <p><span class="card__title">Introduction To Computer Systems</span></p>
                         <p class="card_instructor">Mentor: <span>Jannatul Ferdous Deepty</span></p>
-                        <p class="card_start">Starting: August 15, 2025</p>
-                        <p class="card_date">Duration: 2+ Months</p>
+                        <p class="card_start">Starting: 10th Aug</p>
+                        <p class="card_date">Duration: Full Trimester</p>
                         <p class="fee">
-                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">700৳</span>
-                            <span>350৳</span>
+                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">1000৳</span>
+                            <span>500৳</span>
                         </p>
                     </div>
                 </div>
@@ -240,11 +240,11 @@
                         <p class="card__subtitle">SPL-01</p>
                         <p><span class="card__title">Structured Programming Language</span></p>
                         <p class="card_instructor">Mentor: <span>Tashin Parvez</span></p>
-                        <p class="card_start">Starting: August 15, 2025</p>
-                        <p class="card_date">Duration: 2+ Months</p>
+                        <p class="card_start">Starting: 10th Aug</p>
+                        <p class="card_date">Duration: Full Trimester</p>
                         <p class="fee">
-                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">800৳</span>
-                            <span>400৳</span>
+                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">1200৳</span>
+                            <span>600৳</span>
                         </p>
                     </div>
                 </div>
@@ -257,11 +257,11 @@
                         <p class="card__subtitle">OOP-01</p>
                         <p><span class="card__title">Object Oriented Programming (CSE)</span></p>
                         <p class="card_instructor">Mentor: <span>Anayatul Ahad Shoikot</span></p>
-                        <p class="card_start">Starting: August 15, 2025</p>
-                        <p class="card_date">Duration: 2+ Months</p>
+                        <p class="card_start">Starting: 10th Aug</p>
+                        <p class="card_date">Duration: Full Trimester</p>
                         <p class="fee">
-                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">800৳</span>
-                            <span>400৳</span>
+                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">1200৳</span>
+                            <span>600৳</span>
                         </p>
                     </div>
                 </div>
@@ -274,11 +274,11 @@
                         <p class="card__subtitle">DSA1-01</p>
                         <p><span class="card__title">Data Structure & Algorithm I</span></p>
                         <p class="card_instructor">Mentor: <span>Sayeem been Zaman</span></p>
-                        <p class="card_start">Starting: August 15, 2025</p>
-                        <p class="card_date">Duration: 2+ Months</p>
+                        <p class="card_start">Starting: 10th Aug</p>
+                        <p class="card_date">Duration: Full Trimester</p>
                         <p class="fee">
-                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">800৳</span>
-                            <span>400৳</span>
+                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">1200৳</span>
+                            <span>600৳</span>
                         </p>
                     </div>
                 </div>
@@ -291,11 +291,11 @@
                         <p class="card__subtitle">DSA2-01</p>
                         <p><span class="card__title">Data Structure & Algorithm II</span></p>
                         <p class="card_instructor">Mentor: <span>Jannatul Ferdous Deepty</span></p>
-                        <p class="card_start">Starting: August 15, 2025</p>
-                        <p class="card_date">Duration: 2+ Months</p>
+                        <p class="card_start">Starting: 10th Aug</p>
+                        <p class="card_date">Duration: Full Trimester</p>
                         <p class="fee">
-                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">800৳</span>
-                            <span>400৳</span>
+                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">1200৳</span>
+                            <span>600৳</span>
                         </p>
                     </div>
                 </div>
@@ -308,11 +308,11 @@
                         <p class="card__subtitle">BChem-01</p>
                         <p><span class="card__title">Biophysical Chemistry</span></p>
                         <p class="card_instructor">Mentor: <span>Al Shahriar Imran</span></p>
-                        <p class="card_start">Starting: August 15, 2025</p>
-                        <p class="card_date">Duration: 2+ Months</p>
+                        <p class="card_start">Starting: 10th Aug</p>
+                        <p class="card_date">Duration: Full Trimester</p>
                         <p class="fee">
-                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">700৳</span>
-                            <span>350৳</span>
+                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">1050৳</span>
+                            <span>525৳</span>
                         </p>
                     </div>
                 </div>
@@ -325,11 +325,11 @@
                         <p class="card__subtitle">CN-01</p>
                         <p><span class="card__title">Computer Networks (with Lab content)</span></p>
                         <p class="card_instructor">Mentor: <span>MD. Al Akib</span></p>
-                        <p class="card_start">Starting: August 15, 2025</p>
-                        <p class="card_date">Duration: 2+ Months</p>
+                        <p class="card_start">Starting: 10th Aug</p>
+                        <p class="card_date">Duration: Full Trimester</p>
                         <p class="fee">
-                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">800৳</span>
-                            <span>400৳</span>
+                            <span style="text-decoration: line-through; margin-right: 5px;color:#f35151">1200৳</span>
+                            <span>600৳</span>
                         </p>
                     </div>
                 </div>
@@ -342,7 +342,7 @@
             <p class="section-intro mb-5">Meet the brains behind your success — our star mentors!</p>
             <div class="courseDeck" aria-busy="true" role="status">
                 <div class="skeleton-loader instructor-loader">
-                    <div class="course-card">
+                    <div class="course-card" data-mentor="251">
                         <div class="card">
                             <div class="instructor-img">
                                 <img src="assets/mentors/ahad2.jpg" alt="">
@@ -358,7 +358,7 @@
                     </div>
                 </div>
                 <div class="skeleton-loader instructor-loader">
-                    <div class="course-card">
+                    <div class="course-card" data-mentor="252">
                         <div class="card">
                             <div class="instructor-img">
                                 <img src="assets/mentors/sayeem.jpg" alt="">
@@ -374,7 +374,7 @@
                     </div>
                 </div>
                 <div class="skeleton-loader instructor-loader">
-                    <div class="course-card">
+                    <div class="course-card"  data-mentor="253">
                         <div class="card">
                             <div class="instructor-img">
                                 <img src="assets/mentors/deepty.png" alt="">
@@ -390,7 +390,7 @@
                     </div>
                 </div>
                 <div class="skeleton-loader instructor-loader">
-                    <div class="course-card">
+                    <div class="course-card" data-mentor="254">
                         <div class="card">
                             <div class="instructor-img">
                                 <img src="assets/mentors/akib.jpg" alt="">
@@ -406,10 +406,10 @@
                     </div>
                 </div>
                 <div class="skeleton-loader instructor-loader">
-                    <div class="course-card">
+                    <div class="course-card" data-mentor="255">
                         <div class="card">
                             <div class="instructor-img">
-                                <img src="assets/mentors/tashin.png" alt="">
+                                <img src="assets/mentors/tashin.jpg" alt="">
                             </div>
                             <p class="instructor-dept">Student - CSE</p>
                             <h5 class="instructor-name">Tashin Parvez</h5>
@@ -422,7 +422,7 @@
                     </div>
                 </div>
                 <div class="skeleton-loader instructor-loader">
-                    <div class="course-card">
+                    <div class="course-card" data-mentor="256">
                         <div class="card">
                             <div class="instructor-img">
                                 <img src="assets/mentors/imran.jpg" alt="">
