--- a/mentorProfile.html
+++ b/mentorProfile.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/profile.css">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="preload" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <title>GradeSaver - Course Details</title>
@@ -17,7 +18,7 @@
     <div id="particles-js"></div>
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container d-flex align-items-center justify-content-between">
-            <a class="navbar-brand me-auto" href="#"><img src="assets/icons/gradesaver_logo.png" alt="GradeSaver logo"
+            <a class="navbar-brand me-auto" href="index.html#instructors"><img src="assets/icons/gradesaver_logo.png" alt="GradeSaver logo"
                     class="d-inline-block align-text-top"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"><i
                     class='bx bx-menu'></i></button>
@@ -32,38 +33,21 @@
             </div>
         </div>
     </nav>
-    <div class="topNav">
-        <h1 id="mentor_Name"></h1>
-    </div>
     <section class="instructor-profile-container" id="instructorProfileSection">
-        <h1 class="profile-title" style="text-align: center; margin-bottom: 20px !important;">Basic Info</h1>
+        <h1 class="profile-title" style="text-align: center; margin-bottom: 20px !important;font-family: 'IBM Plex Mono'; font-weight: 700;" id="mentor_Name"></h1>
         <div class="instructor-profile-row">
             <div class="profile-highlight">
                 <div class="profile-img-wrapper">
-                    <img id="profileImg" src="" class="profile-img">
+                    <img id="profileImg" src="" class="profile-img" alt="Profile Image">
                 </div>
                 <div class="profile-details">
-                    <div><b>STUDENT ID</b>
-                        <p id="student_id"></p>
-                    </div>
-                    <div><b>TRIMESTER</b>
-                        <p id="trimester"></p>
-                    </div>
-                    <div><b>PHONE</b>
-                        <p></p>
-                    </div>
-                    <div><b>EMAIL</b>
-                        <p></p>
-                    </div>
-                    <div><b>PERSONAL EMAIL</b>
-                        <p></p>
-                    </div>
-                    <div><b>PROPOSED COURSES</b>
-                        <p></p>
-                    </div>
-                    <div><b>RATING</b>
-                        <p></p>
-                    </div>
+                    <div><p><b>STUDENT ID: </b></p><p id="student_id"></p></div>
+                    <div><p><b>TRIMESTER: </b></p><p id="trimester"></p></div>
+                    <div><p><b>PHONE: </b></p><p id="phone"></p></div>
+                    <div><p><b>EMAIL: </b></p><p id="email"></p></div>
+                    <div><p><b>PERSONAL EMAIL: </b></p><p id="per_email"></p></div>
+                    <div><p><b>PROPOSED COURSES: </b></p><p id="proposed"></p></div>
+                    <div><p><b>RATING: </b></p><p id="rating"></p></div>
                     <div class="profile-links">
                         <a id="profileFb" target="_blank" href=""><i class="bx bxl-facebook"></i></a>
                         <a id="profileLinkedin" target="_blank" href=""><i class="bx bxl-linkedin"></i></a>
@@ -73,10 +57,7 @@
             <div class="profile-about">
                 <h1 class="profile-title">About</h1>
                 <div id="profileAbout"></div>
-                <div class="mt-3"><b>Courses Taking:</b>
-                    <ul id='profileBatchCourses' style='padding-left:18px;'>No assigned courses</ul>
-                    <ul id='profileBatchCourses' style='padding-left:18px;'></ul>
-                </div>
+                <br>
             </div>
         </div>
     </section>
@@ -114,6 +95,7 @@
     </footer>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script defer src="assets/scripts/index.js"></script>
+    <script defer src="assets/scripts/mentorData.js"></script>
+    <script defer src="assets/scripts/fetchMentor.js"></script>
 </body>
 </html>
