--- a/mentorProfile.html
+++ b/mentorProfile.html
@@ -49,8 +49,8 @@
                     <div><p><b>PROPOSED COURSES: </b></p><p id="proposed"></p></div>
                     <div><p><b>RATING: </b></p><p id="rating"></p></div>
                     <div class="profile-links">
-                        <a id="profileFb" target="_blank" href=""><i class="bx bxl-facebook"></i></a>
-                        <a id="profileLinkedin" target="_blank" href=""><i class="bx bxl-linkedin"></i></a>
+                        <a id="profileFb" target="_blank" href="" style="pointer-events: auto;"><i class="bx bxl-facebook"></i></a>
+                        <a id="profileLinkedin" target="_blank" href="" style="pointer-events: auto;"><i class="bx bxl-linkedin"></i></a>
                     </div>
                 </div>
             </div>
